# telegram-phone-number-checker

./: .gitignore  pyproject.toml  requirements-dev.txt
telegram_phone_number_checker/: __main__.py
