[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-phone-number-checker"
version = "1.1.0"
description = "Check if phone numbers are connected to Telegram accounts."
authors = [{name = "Bellingcat"}]
license = "MIT"
readme = "README.md"

[project.urls]
Repository = "https://github.com/bellingcat/telegram-phone-number-checker"
"Bug Tracker" = "https://github.com/bellingcat/telegram-phone-number-checker/issues"

[project.scripts]
telegram-phone-number-checker = "telegram-phone-number-checker.__main__:main"

[tool.mypy]
check_untyped_defs = true
exclude = ["noxfile.py"]

[tool.ruff]
exclude = [".venv", "noxfile.py"]
select = ["ALL"]
ignore = [
  "ANN101", # No need to annotate `self`.
  "I001",   # Using `reorder-python-imports`.
]
line-length = 88
indent-width = 4

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools.packages.find]
exclude = ["tests*"]


